--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,9 @@
     border-radius: 0;
     z-index: 99;
 }
+.bg-yellow{
+   background-color: 	#FFF8DC;
+}
 
 .bg-dark-radial {
     background-image: -webkit-repeating-radial-gradient(center center, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 1px, transparent 100%);
@@ -100,9 +103,6 @@
     background-image: -o-repeating-radial-gradient(center center, rgba(256, 256, 256, 0.2), rgba(256, 256, 256, 0.2) 1px, transparent 1px, transparent 100%);
     background-image: repeating-radial-gradient(center center, rgba(256, 256, 256, 0.2), rgba(256, 256, 256, 0.2) 1px, transparent 1px, transparent 100%);
     background-size: 3px 3px;
-}
-.bg-yellow{
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(198,224,113,1) 35%, rgba(245,222,22,1) 100%);
 }
 
 .bg-footer{
