--- a/css/style.css
+++ b/css/style.css
@@ -154,12 +154,12 @@
 }
 
 .page-header {
-    height: 300px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(rgba(4, 15, 40, .7), rgba(4, 15, 40, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(4, 15, 40, .7), rgba(4, 15, 40, .7)), url(../img/home/carousel-1.webp) center center no-repeat;
     background-size: cover;
 }
 
