--- a/Scripts/App/Templates/land-converter-template.html
+++ b/Scripts/App/Templates/land-converter-template.html
@@ -6,9 +6,9 @@
     </tr>
     <tr>
         <td colspan="2">
-            <input type="text" data-ng-model="sqMeter" data-ng-change="calculateFromSqMeter()" class="form-control" /></td>
+            <input type="number" data-ng-model="sqMeter" data-ng-change="calculateFromSqMeter()" class="form-control" /></td>
         <td colspan="2">
-            <input type="text" data-ng-model="sqFeet" data-ng-change="calculateFromSqFeet()" class="form-control" /></td>
+            <input type="number" data-ng-model="sqFeet" data-ng-change="calculateFromSqFeet()" class="form-control" /></td>
     </tr>
     <tr>
         <td>Ropani</td>
@@ -18,13 +18,13 @@
     </tr>
     <tr>
         <td>
-            <input type="text" data-ng-model="ropani" data-ng-change="calculateFromRAPD()" class="form-control" /></td>
+            <input type="number" data-ng-model="ropani" data-ng-change="calculateFromRAPD()" class="form-control" /></td>
         <td>
-            <input type="text" data-ng-model="aana" data-ng-change="calculateFromRAPD()" class="form-control" /></td>
+            <input type="number" data-ng-model="aana" data-ng-change="calculateFromRAPD()" class="form-control" /></td>
         <td>
-            <input type="text" data-ng-model="paisa" data-ng-change="calculateFromRAPD()" class="form-control" /></td>
+            <input type="number" data-ng-model="paisa" data-ng-change="calculateFromRAPD()" class="form-control" /></td>
         <td>
-            <input type="text" data-ng-model="daam" data-ng-change="calculateFromRAPD()" class="form-control" /></td>
+            <input type="number" data-ng-model="daam" data-ng-change="calculateFromRAPD()" class="form-control" /></td>
     </tr>
     <tr>
         <td>Bigaha</td>
@@ -33,11 +33,11 @@
     </tr>
     <tr>
         <td>
-            <input type="text" data-ng-model="bigaha" data-ng-change="calculateFromBKD()" class="form-control" /></td>
+            <input type="number" data-ng-model="bigaha" data-ng-change="calculateFromBKD()" class="form-control" /></td>
         <td>
-            <input type="text" data-ng-model="kathha" data-ng-change="calculateFromBKD()" class="form-control" /></td>
+            <input type="number" data-ng-model="kathha" data-ng-change="calculateFromBKD()" class="form-control" /></td>
         <td>
-            <input type="text" data-ng-model="dhur" data-ng-change="calculateFromBKD()" class="form-control" /></td>
+            <input type="number" data-ng-model="dhur" data-ng-change="calculateFromBKD()" class="form-control" /></td>
     </tr>
 	<tr>
 		<td>Hector</td>
@@ -45,10 +45,10 @@
 	</tr>
 	<tr>
 		<td>
-			<input type="text" data-ng-model="hector" data-ng-change="calculateFromHector()" class="form-control" />
+			<input type="number" data-ng-model="hector" data-ng-change="calculateFromHector()" class="form-control" />
 		</td>
 		<td>
-			<input type="text" data-ng-model="acre" data-ng-change="calculateFromAcre()" class="form-control" />
+			<input type="number" data-ng-model="acre" data-ng-change="calculateFromAcre()" class="form-control" />
 		</td>
 		<td>
 		</td>
