--- a/Scripts/App/Templates/date-converter-template.html
+++ b/Scripts/App/Templates/date-converter-template.html
@@ -1,23 +1,45 @@
-<div class=row>
-<div class="col-md-2">
-<select class="form-control input-small" data-ng-model="convert" data-ng-options="c for c in convertTo" ng-change="changeConvertTo()"></select>
-</div>
-<div class="col-md-2">
-<select class="form-control input-small" data-ng-model="year" data-ng-options="year for year in years" ng-change="hideResult()"></select>
-</div>
-<div class="col-md-2">
-<select class="form-control input-small" data-ng-model="month" data-ng-options="month.text for month in months" ng-change="hideResult()"></select>
-</div>
-<div class="col-md-2">
-<select class="form-control input-small" data-ng-model="day" data-ng-options="day for day in days" ng-change="hideResult()"></select>
-</div>
-<div class="col-md-2">
-<a class="btn btn-info" data-ng-click="convertDate()">{{btnText}}</a>
-</div>
-
+<div class="row">
+  <div class="col-md-2">
+    <select
+      class="form-control input-small"
+      data-ng-model="convert"
+      data-ng-options="c for c in convertTo"
+      ng-change="changeConvertTo()"
+    ></select>
+  </div>
+  <div class="col-md-2">
+    <select
+      class="form-control input-small"
+      data-ng-model="year"
+      data-ng-options="year for year in years"
+      ng-change="hideResult()"
+    ></select>
+  </div>
+  <div class="col-md-2">
+    <select
+      class="form-control input-small"
+      data-ng-model="month"
+      data-ng-options="month.text for month in months"
+      ng-change="hideResult()"
+    ></select>
+  </div>
+  <div class="col-md-2">
+    <select
+      class="form-control input-small"
+      data-ng-model="day"
+      data-ng-options="day for day in days"
+      ng-change="hideResult()"
+    ></select>
+  </div>
+  <div class="col-lg-4"> 
+    <a class="btn btn-primary" data-ng-click="convertDate()">{{btnText}}</a>
+  </div>
 </div>
 <div ng-switch on="result">
-    <div ng-switch-when="true" class="date-result">
-        <span class="week-name">{{resultWeekDay}}</span><span class="converted-date">, {{resultMonth}} {{resultDay}}, {{resultYear}}</span>
-    </div>
+  <div ng-switch-when="true" class="date-result text-uppercase text-center py-4">
+    <h3 class="week-name">{{resultWeekDay}}
+    <span class="converted-date text-primary"
+      >, {{resultMonth}} {{resultDay}}, {{resultYear}}</span
+    ></h3>
+  </div>
 </div>
