--- a/Scripts/App/Templates/date-converter-template.html
+++ b/Scripts/App/Templates/date-converter-template.html
@@ -37,9 +37,9 @@
 </div>
 <div ng-switch on="result" class="py-1 px-2">
   <div ng-switch-when="true" class="date-result text-uppercase text-center py-6 px-2">
-    <h3 class="week-name">{{resultWeekDay}}
+    <h3 class="week-name">{{resultWeekDay}},
     <span class="converted-date text-primary"
-      >, {{resultMonth}} {{resultDay}}, {{resultYear}}</span
+      >{{resultMonth}} {{resultDay}}, {{resultYear}}</span
     ></h3>
   </div>
 </div>
