--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@
 
 .portfolio-box::before,
 .portfolio-box::after {
-    position: absolute;
+    position: relative;
     content: "";
     width: 0;
     height: 100%;
