--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,15 @@
     text-align: center;
 }
 
-
+.back-to-top {
+    position: fixed;
+    display: none;
+    left: 50%;
+    bottom: 0;
+    margin-left: -22px;
+    border-radius: 0;
+    z-index: 99;
+}
 .bg-yellow{
    background-color: #fdf5e6;
 }
